# simple_harmonic_motion

./: README.md  main.py  pyproject.toml
src/simple_harmonic_motion/: __init__.py
