[project]
name = "simple-harmonic-motion"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TakumaIkeda", email = "i.taku0415@gmail.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_harmonic_motion"]
